# CopyControl

./: CopyControl.sln  README.md
CopyControl/: CMakeLists.txt  CopyControl.vcxproj  CopyControl.vcxproj.filters  DoublyLinkedNode.h  DoublyLinkedNodeIterator.h  List.h  Queue.h  QueueIterator.h  Stack.h  StackIterator.h  main.cpp
CopyControl/Debug/: vc141.idb
CopyControl/Debug/CopyControl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyControl.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CopyControl/x64/Debug/: vc141.idb
CopyControl/x64/Debug/CopyControl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyControl.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: CopyControl.ilk
x64/Debug/: CopyControl.ilk
